# hierarchical_late_chunking

./: .gitignore  GEMINI.md  PLANNING.md  README.md  TASK.md  UPDATES.md  ai-tracker.sh  hierarchical_late_chunking.py  pyproject.toml  server.py
chroma_store/: chroma.sqlite3
components/: chroma_db.py  data_structures.py  dummy_llm.py  embedding_interface.py  hierarchy_late_chunk.py  utils.py  vector_db_interface.py
components/embeddings_llm/: BaseEmbeddingClass.py  embedding_const.py  embedding_llm.py  jina_embedding_model.py  llm_interface.py
components/llm/: gemini_llm.py  jina_llm.py  models_const.py
components/models/: llm_model.py
frontend/: index.html  script.js  style.css
tests/components/: test_chroma_db.py  test_hierarchy_late_chunk.py  test_jina_embedding_model.py
